--- a/VHDeS.html
+++ b/VHDeS.html
@@ -3,8 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VHDeS</title>
+    <link rel="stylesheet" href="VHDeS.css">
 </head>
 <body>
+    <section class="box">
     <form id="minForm">
         <label for="username">Skriv ditt anvandärnamn:</label>
         <input type="text" id="username" name="username">
@@ -14,7 +16,7 @@
         <br>
         <input type="submit" value="Submit">
     </form>
-
+</section>
     <script>
         let username = null;
         const form = document.getElementById('minForm')
