uppdatering på html och css

--- a/VHDeS.html
+++ b/VHDeS.html
@@ -5,7 +5,7 @@
     <title>VHDeS</title>
     <link rel="stylesheet" href="VHDeS.css">
 </head>
-<body>
+<body class="BodyLogIn">
     <section class="box">
     <form id="minForm">
         <label for="username">Skriv ditt anvandärnamn:</label>
