--- a/VHDeSMain.html
+++ b/VHDeSMain.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="VHDeS.css">
 </head>
-<body>
-    <p>Välkommen Daris</p>
-    
+<body class="BodySparkCykel">
+<header>
+<section class="Intro">
+    <header>  
+    <nav>
+    <ul>   
+        <li><a class="Logo" href="Index.html">Header Logo</a> </li>
+       <li><a href="">Header link one</a></li>
+        <li><a href="">Header link two</a></li>
+       <li> <a href="">Header link three</a></li>
+    </ul>
+    </nav>
+    </header>
+    <section class="Hero">
+        <h1>Välkommen Daris</h1>
+
+    <div class="PlaceHolder">
+       <img src="" alt="">
+       <img src="" alt="">
+       <img src="" alt="">
+    </div>
+
+</section>
+</section>
+   
+
 </body>
 </html>
