--- a/VHDeSMain.html
+++ b/VHDeSMain.html
@@ -13,15 +13,15 @@
     <nav>
     <ul>   
         <li><a class="Logo" href="Index.html">Header Logo</a> </li>
-       <li><a href="">Header link one</a></li>
-        <li><a href="">Header link two</a></li>
-       <li> <a href="">Header link three</a></li>
+       <li><a href="">link one</a></li>
+        <li><a href="">link two</a></li>
+       <li> <a href="">link three</a></li>
     </ul>
     </nav>
     </header>
     <section class="Hero">
         <h1>Välkommen Daris</h1>
-
+        <p class="inledning">Vår webbplats gör det enkelt att hyra elsparkcyklar snabbt och smidigt. Du hittar, låser upp och betalar direkt i mobilen, så att du kan ta dig runt på ett hållbart och flexibelt sätt – när det passar dig.</p>
     <div class="PlaceHolder">
        <img src="" alt="">
        <img src="" alt="">
@@ -30,7 +30,9 @@
 
 </section>
 </section>
-   
+   <script>
+
+   </script>
 
 </body>
 </html>
