--- a/VHDeSMain.html
+++ b/VHDeSMain.html
@@ -20,7 +20,7 @@
     </nav>
     </header>
     <section class="Hero">
-        <h1>Välkommen Daris</h1>
+        <h1 id="welcome">Välkommen</h1>
         <p class="inledning">Vår webbplats gör det enkelt att hyra elsparkcyklar snabbt och smidigt. Du hittar, låser upp och betalar direkt i mobilen, så att du kan ta dig runt på ett hållbart och flexibelt sätt – när det passar dig.</p>
     <div class="PlaceHolder">
        <img src="" alt="">
@@ -31,7 +31,13 @@
 </section>
 </section>
    <script>
-
+        //Tar ut URL:en så vi kan hämta 
+        const params = new URLSearchParams(window.location.search);
+        const text = document.getElementById("welcome");
+        let username = params.get('username');
+        if(username){
+            text.textContent = `Välkommen ${username}!`;
+        } 
    </script>
 
 </body>
