--- a/VHDeS.html
+++ b/VHDeS.html
@@ -30,7 +30,7 @@
             console.log(text + password);
             if(text == "daris" && password == "daris"){
                 username = text;
-                window.location.href=`VHDeS/VHDeSMain.html?username=${encodeURIComponent(username)}`;
+                window.location.href=`VHDeSMain.html?username=${encodeURIComponent(username)}`;
                 }else{
                 alert("Fel användarnamn eller lösenord!");
                 }
